src/main/java/com/example/usedTrade/error/member/exception/MemberStopUserException.java
package com.example.usedTrade.error.member.exception;

public class MemberStopUserException extends RuntimeException {
    public MemberStopUserException(String error) {
        super(error);
    }
}
